2011-12-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/open.c: Use va_arg(..., mode_t) to retrieve mode.
	* posix/src/mqueueopen.c: Use va_arg(..., mode_t) to retrieve mode.
	* posix/src/semopen.c: Use va_arg(..., mode_t) to retrieve mode.

2011-11-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/clnt_udp.c (struct cu_data):
	Introduce unions _cu_inbuf, _cu_outbuf to avoid aliasing.

2011-11-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/rtems/rtems_dhcp.c (dhcp_init):
	Remove unused var "len".
	* score/src/objectinitializeinformation.c
	(_Objects_Initialize_information): Remove unused var "name_length".

2011-11-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1967/cpukit
	* score/include/rtems/score/object.h,
	score/src/objectinitializeinformation.c: Remove
	OBJECTS_NAME_ALIGNMENT and uses.

2011-11-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1941/cpukit
	* libmisc/monitor/mon-server.c, score/include/rtems/system.h: Remove
	use of RTEMS_offset() in favor of standard offsetof(). This was
	undocumented and there was only one internal use. Change noted in
	4.11 release notes.

2011-11-28	Werner Almesberger <werner@almesberger.net>

	PR 1961/cpukit
	* score/src/coremsgsubmit.c: Close window caused by using message
	pending count rather than directly obtaining unused buffer.

2011-11-26	Gedare Bloom <gedare@rtems.org>

	PR 1963
	* score/include/rtems/score/rbtree.h: Fix _RBTree_Container_of macro to
	use correct arithmetic.

2011-11-26	Gedare Bloom <gedare@rtems.org>

	PR 1964
	* score/inline/rtems/score/chain.inl: Fix chain is first and last.

2011-11-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* sapi/include/confdefs.h: Added a bsp override option for
	MAXIMUM_DEVICES.

2011-11-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/include/rtems/rtems/event.h: Revert parameter name change.

2011-11-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1924/cpukit